--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -882,7 +882,7 @@ input[type=button]:extend(.button all) {}
   text-decoration: none;
   min-width: 2.2em;
   min-height: 2.2em;
-  padding: .5em;
+  padding: @small_spacing;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   cursor: pointer;
