--- a/site/resources/styles/core/forms/base.less
+++ b/site/resources/styles/core/forms/base.less
@@ -50,6 +50,12 @@
     display: block;
   }
 
+  .form-row
+  {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
   .group
   {
     display: block;
@@ -59,6 +65,11 @@
     {
       clear: left;
     }
+
+    .group
+    {
+      margin-left: 18px;
+    }
   }
 
   .one-input
@@ -66,8 +77,6 @@
     input:first-child
     {
       float: left;
-      padding: 0px;
-      margin-left: 0px;
     }
 
     label
