--- a/site/resources/styles/core/forms/ltr-right.less
+++ b/site/resources/styles/core/forms/ltr-right.less
@@ -1,13 +1,13 @@
 @import "../core-values";
 @import "form-values";
 
-.basic-form
+.basic-form.ltr.right
 {
   fieldset
   {
-    margin-left: @label-area-width;
     border: none;
     padding-left: 0px;
+    margin-left: @label-area-width;
 
     fieldset,
     .group
