--- a/site/resources/styles/core/forms/top-layout.less
+++ b/site/resources/styles/core/forms/top-layout.less
@@ -1,53 +1,53 @@
-.basic-form
+.basic-form.top
 {
   width: 600px;
-}
 
-.basic-form input[type=text],
-.basic-form input[type=password],
-.basic-form input[type=file],
-.basic-form textarea,
-.basic-form select,
-.basic-form .hint,
-.basic-form .group
-{
-  width: 300px;
-}
+  input[type=text],
+  input[type=password],
+  input[type=file],
+  textarea,
+  select,
+  .hint,
+  .group
+  {
+    width: 300px;
+  }
 
-.basic-form .two-inputs input,
-.basic-form .two-inputs select,
-.basic-form .two-inputs textarea
-{
-  width: 145px;
-}
+  .two-inputs input,
+  .two-inputs select,
+  .two-inputs textarea
+  {
+    width: 145px;
+  }
 
-.basic-form .three-inputs input,
-.basic-form .three-inputs select,
-.basic-form .three-inputs textarea
-{
-  width: 95px;
-}
+  .three-inputs input,
+  .three-inputs select,
+  .three-inputs textarea
+  {
+    width: 95px;
+  }
 
-.basic-form label:first-child
-{
-  display: block;
-}
+  label:first-child
+  {
+    display: block;
+  }
 
-.basic-form .help
-{
-  float: right;
-  width: 180px;
-  height: auto;
-  margin-right: 12px;
-}
+  .help
+  {
+    float: right;
+    width: 180px;
+    height: auto;
+    margin-right: 12px;
+  }
 
-.basic-form fieldset
-{
-  padding-right: 0px;
-  margin-right: 0px;
-}
+  fieldset
+  {
+    padding-right: 0px;
+    margin-right: 0px;
+  }
 
-.basic-form fieldset fieldset
-{
-  border-right-width: 0px;
+  fieldset fieldset
+  {
+    border-right-width: 0px;
+  }
 }
