--- a/site/resources/themes/hochzeit.less
+++ b/site/resources/themes/hochzeit.less
@@ -37,8 +37,8 @@ http://www.earthli.com/software/webcore
 @highlighted_text_color: #c72c1b;
 @selected_text_color: @title_color;
 @selected_control_text_color: @background_color;
-@control_text_color: #text_color;
-@edit_control_text_color: #FDF8E5;
+@control_text_color: @text_color;
+@edit_control_text_color: @text_color;
 @banner_link_color: darken(saturate(@background_color, 30%), 5%);
 @footer_link_color: @banner_link_color;
 
