--- a/site/resources/styles/core/forms/top-right.less
+++ b/site/resources/styles/core/forms/top-right.less
@@ -1,13 +1,16 @@
-.basic-form fieldset fieldset,
-.basic-form .hint,
-.basic-form fieldset .group,
-.basic-form fieldset legend
+.basic-form.top.right
 {
-  margin-left: 0px;
-}
+  fieldset fieldset,
+  .hint,
+  fieldset .group,
+  fieldset legend
+  {
+    margin-left: 0px;
+  }
 
-.basic-form fieldset
-{
-  border-left-width: 0px;
-  padding-left: 0px;
+  fieldset
+  {
+    border-left-width: 0px;
+    padding-left: 0px;
+  }
 }
