--- a/site/resources/themes/blue_tan.css
+++ b/site/resources/themes/blue_tan.css
@@ -23,6 +23,22 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
+.style-controls button,
+.style-controls input[type=submit],
+.style-controls input[type=button] {
+  color: #595980;
+}
+.style-controls input[type=text],
+.style-controls input[type=password],
+.style-controls select,
+.style-controls textarea {
+  background-color: #f0f0f0;
+  color: #595980;
+  border: 1px solid #bdbdcc;
+  border-radius: 4px;
+  padding: 4px;
+  margin-left: -5px;
+}
 body {
   background-color: #ffffff;
   color: #222255;
@@ -199,37 +215,6 @@ pre > code,
 .quote-inline,
 .quote-block {
   color: #6f6f91;
-}
-.style-controls input,
-.style-controls select {
-  margin: 0;
-}
-.style-controls input[type="radio"],
-.style-controls input[type="checkbox"] {
-  vertical-align: middle;
-  margin: 0;
-  padding: 0;
-}
-.style-controls button,
-.style-controls input[type=submit],
-.style-controls input[type=text],
-.style-controls input[type=password],
-.style-controls input[type=button],
-.style-controls select,
-.style-controls textarea {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-.style-controls input[type=text],
-.style-controls input[type=password],
-.style-controls select,
-.style-controls textarea {
-  background-color: #f0f0f0;
-  border: 1px solid #bdbdcc;
-  border-radius: 4px;
-  padding: 4px;
-  margin-left: -5px;
 }
 .button,
 .style-controls button,
