--- a/site/resources/themes/theme-base.less
+++ b/site/resources/themes/theme-base.less
@@ -1,5 +1,6 @@
 @import "../styles/core/core-values";
 @import "../styles/core/core-mixins";
+@import "../styles/core/common-forms";
 
 body
 {
@@ -208,52 +209,6 @@ pre > code,
 .quote-block
 {
   color: @dimmer_text_color;
-}
-
-.style-controls
-{
-  button:extend(.button all) {}
-  input[type=submit]:extend(.button all) {}
-  input[type=button]:extend(.button all) {}
-
-  input,
-  select
-  {
-    margin: 0;
-  }
-
-  input[type="radio"],
-  input[type="checkbox"]
-  {
-    vertical-align: middle;
-    margin: 0;
-    padding: 0;
-  }
-
-  button,
-  input[type=submit],
-  input[type=text],
-  input[type=password],
-  input[type=button],
-  select,
-  textarea
-  {
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-  }
-
-  input[type=text],
-  input[type=password],
-  select,
-  textarea
-  {
-    background-color: @edit_control_background_color;
-    border: 1px solid @control_border_color;
-    border-radius:  @standard_border_radius;
-    padding: @standard_border_radius;
-    margin-left: -@standard_border_radius - 1px;
-  }
 }
 
 .button
