--- a/site/resources/styles/themes/theme-base.less
+++ b/site/resources/styles/themes/theme-base.less
@@ -1,6 +1,6 @@
-@import "../styles/core/core-values";
-@import "../styles/core/core-mixins";
-@import "../styles/core/common-forms";
+@import "../core/core-values";
+@import "../core/core-mixins";
+@import "../core/common-forms";
 
 body
 {
