--- a/site/resources/styles/themes/alien.css
+++ b/site/resources/styles/themes/alien.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #b3b3b3;
+  background-color: #0f0f0f;
+  border-color: #3d3d3d;
+}
 body {
   background-color: #000000;
   color: #ffffff;
