--- a/site/resources/styles/themes/fog.css
+++ b/site/resources/styles/themes/fog.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #9a9a9a;
+  background-color: #e1e1e1;
+  border-color: #cacaca;
+}
 body {
   background-color: #eeeeee;
   color: #333333;
