--- a/site/resources/styles/themes/osx.css
+++ b/site/resources/styles/themes/osx.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #989898;
+  background-color: #ebebeb;
+  border-color: #cecece;
+}
 body {
   background-color: #f8f8f8;
   color: #222222;
