--- a/site/resources/styles/themes/sea.css
+++ b/site/resources/styles/themes/sea.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #7a8cac;
+  background-color: #233f70;
+  border-color: #4c6795;
+}
 body {
   background-color: #294a83;
   color: #dddddd;
