--- a/site/resources/styles/themes/slate.css
+++ b/site/resources/styles/themes/slate.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #727272;
+  background-color: #262626;
+  border-color: #4e4e4e;
+}
 body {
   background-color: #333333;
   color: #c0c0c0;
