--- a/site/resources/styles/themes/standard.css
+++ b/site/resources/styles/themes/standard.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #a3a3a3;
+  background-color: #f2f2f2;
+  border-color: #d7d7d7;
+}
 body {
   background-color: #ffffff;
   color: #333333;
