--- a/site/resources/styles/themes/steel.css
+++ b/site/resources/styles/themes/steel.css
@@ -39,6 +39,13 @@ http://www.earthli.com/software/webcore
   padding: 4px;
   margin-left: -5px;
 }
+.style-controls input[disabled],
+.style-controls select[disabled],
+.style-controls textarea[disabled] {
+  color: #55606f;
+  background-color: #89a1c1;
+  border-color: #7c8ca3;
+}
 body {
   background-color: #9aaeca;
   color: #000000;
